--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@emotion/styled": "^11.10.4",
     "@mui/icons-material": "^5.10.6",
     "@mui/material": "^5.10.8",
+    "@mui/styles": "^5.10.9",
     "@usedapp/core": "^1.1.5",
     "ethers": "^5.7.1",
     "next": "12.3.1",
