--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@mui/icons-material": "^5.10.6",
     "@mui/material": "^5.10.8",
     "@mui/styles": "^5.10.9",
+    "@mui/x-data-grid": "^5.17.7",
     "@usedapp/core": "^1.1.5",
     "ethers": "^5.7.1",
     "next": "12.3.1",
