--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,8 +1,4 @@
 {
-  "extends": "next/core-web-vitals",
+  "extends": "next/core-web-vitals"
   // ...
-  "rules": {
-    // Other rules
-    // "@next/next/no-img-element": "off"
-  }
 }
